First checkin for bug 29800, preventing scrolling to content when focus memory is resetting focus after deactivating and reactivating a window.